--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,6 @@
-streamlit 
-pandas
+streamlit==1.31.0
+pandas==2.2.0
+google-auth==2.27.0
+google-auth-oauthlib==1.2.0
+google-auth-httplib2==0.2.0
+google-api-python-client==2.116.0
